--- a/aboutus.html
+++ b/aboutus.html
@@ -36,19 +36,19 @@
                     Services
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="postlanding.html" style="color: #d52b1e;">Post Landing</a>
+                    <a class="dropdown-item" href="postlanding.html" style="color: #d52b1e;">Post Landing Services</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="immigrationassistance.html" style="color: #d52b1e;">Immigration Assistance</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="culturalintegration.html"  style="color: #d52b1e;">Cultural Integration</a>
+                    <a class="dropdown-item" href="culturalintegration.html"  style="color: #d52b1e;">City Tour & Exploration</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="affordableflights.html"  style="color: #d52b1e;">Affordable Flights</a>
+                    <a class="dropdown-item" href="affordableflights.html"  style="color: #d52b1e;">Affordable Flights & Hotels</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="pickupanddrop.html"  style="color: #d52b1e;">PickUp and Drop</a>
+                    <a class="dropdown-item" href="pickupanddrop.html"  style="color: #d52b1e;">PickUp and Drop Services</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="carrental.html"  style="color: #d52b1e;">Car Rentals</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="scholarship.html"  style="color: #d52b1e;">Scholarship Assistance</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="carrental.html"  style="color: #d52b1e;">Hourly Rentals</a>
                   </div>
                 </li>
           
@@ -164,7 +164,7 @@
                     </form>
                     <div class="d-flex justify-content-between pt-3 flex-wrap">
                       <span>Canadainfellow02@gmail.com</span>
-                      <span>+1 (647) 512-6875</span>
+                      <span>+1 (647) 512-6875<br>+1 (416) 543-0318</span>
                   </div>
                 </div>
             </div>
