--- a/affordableflights.html
+++ b/affordableflights.html
@@ -36,20 +36,19 @@
                     Services
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="postlanding.html" style="color: #d52b1e;">Post Landing</a>
+                    <a class="dropdown-item" href="postlanding.html" style="color: #d52b1e;">Post Landing Services</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="immigrationassistance.html" style="color: #d52b1e;">Immigration Assistance</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="culturalintegration.html"  style="color: #d52b1e;">Cultural Integration</a>
+                    <a class="dropdown-item" href="culturalintegration.html"  style="color: #d52b1e;">City Tour & Exploration</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="affordableflights.html"  style="color: #d52b1e;">Affordable Flights</a>
+                    <a class="dropdown-item" href="affordableflights.html"  style="color: #d52b1e;">Affordable Flights & Hotels</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="pickupanddrop.html"  style="color: #d52b1e;">PickUp and Drop</a>
+                    <a class="dropdown-item" href="pickupanddrop.html"  style="color: #d52b1e;">PickUp and Drop Services</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="carrental.html"  style="color: #d52b1e;">Car Rentals</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="scholarship.html"  style="color: #d52b1e;">Scholarship Assistance</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="carrental.html"  style="color: #d52b1e;">Hourly Rentals</a>
-                
                   </div>
                 </li>
           
@@ -95,6 +94,36 @@
                 </div>
                 <div class="col-md-5 d-flex align-items-center">
                     <img src="assets/airport7.jpg" width="100%" style="border-radius: 20px;">
+                </div>
+            </div>
+        </div>
+        <div class="containers pt-5 mt-5">
+            <div class="row mx-0 py-5" style="width: 1200px;">
+                <div class="col-md-5 d-flex align-items-center">
+                    <img src="assets/aboutus3.jpg" width="100%" style="border-radius: 20px;">
+                </div>
+                <div class="col-md-7 px-5" style="display: flex;flex-direction: column;justify-content: center;">
+                    <p class="h1 amarnath" style="color: #d52b1e;font-size:48px; font-weight: 700;">Affordable Accommodation Booking</p>
+                    <ul>
+                        <li><p class="text-justify h5 py-3">Information: We offer a wide variety of budget-friendly accommodation options, including hotels, hostels, and short-term rentals. You can choose accommodations based on your budget, location preferences, and other specific needs.</p></li>
+                        <li><p class="text-justify h5 py-3">Requirements: No specific requirements; discounts are available to all newcomers.</p></li>
+                        <li><p class="text-justify h5 py-3">Procedure: Access our exclusive Hotels discounts by booking through our platform. We provide special offers and promotions to help you secure affordable accomadations to Canada.</p></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="containers">
+            <div class="row mx-0 py-5" style="width: 1200px;">
+                <div class="col-md-7 px-5" style="display: flex;flex-direction: column;justify-content: center;">
+                    <p class="h1 amarnath" style="color: #d52b1e;font-size:48px; font-weight: 700;">Hotel Reservation Assistance</p>
+                    <ul>
+                        <li><p class="text-justify h5 py-3">Information: We offer assistance in booking hotels at competitive rates. We work with various hotel partners to provide you with a wide range of options, ensuring you find the right hotel for your needs.</p></li>
+                        <li><p class="text-justify h5 py-3">Requirements: No specific requirements; our booking assistance is available to all newcomers.</p></li>
+                        <li><p class="text-justify h5 py-3">Procedure: Contact our booking assistance team to discuss your travel needs. We'll provide guidance on selecting suitable accommodation, assist with bookings, and ensure you have all the necessary information for a stress-free journey.</p></li>
+                    </ul>
+                </div>
+                <div class="col-md-5 d-flex align-items-center">
+                    <img src="assets/postlanding1.jpg" width="100%" style="border-radius: 20px;">
                 </div>
             </div>
         </div>
@@ -146,7 +175,7 @@
                     </form>
                     <div class="d-flex justify-content-between pt-3 flex-wrap">
                         <span>Canadainfellow02@gmail.com</span>
-                        <span>+1 (647) 512-6875</span>
+                        <span>+1 (647) 512-6875<br>+1 (416) 543-0318</span>
                     </div>
                 </div>
             </div>
